backup/policies/policy-deny-all.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: cpu
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: cpu
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # - toEndpoints:
    #     - matchLabels:
    #         app.kubernetes.io/name: kube-dns
    #         app: coredns
    #         io.kubernetes.pod.namespace: kube-system
    #   toPorts:
    #     - ports:
    #         - port: "53"
    #           protocol: UDP
    #       rules:
    #         dns:
    #           - matchPattern: "*"
